edit: add new icons & enhance demo page fix: use padding instead of overflow: hidden on app-body to avoid children's top/bottom margin issue

--- a/assets/css/kakeibo/_creation-center.scss
+++ b/assets/css/kakeibo/_creation-center.scss
@@ -50,7 +50,7 @@
     transition: opacity $animation-duration ease;
 
     .-item + .-item {
-      margin-top: .4rem;
+      margin-top: .5rem;
     }
   }
 }
